[project]
name = "web-slides-to-pdf"
version = "0.2.0"
description = "Herramienta para convertir presentaciones web (JessyInk, Sozi, HTML/SVG) a PDF manteniendo efectos visuales."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "img2pdf>=0.6.3",
    "playwright>=1.57.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.53.0",
]
